kubernetes/apps/equestria/home/seafile/route.yaml
---
# yaml-language-server: $schema=https://lds-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - "${APP}.${ROOT_DOMAIN}"
  rules:
    - backendRefs:
        - name: ${APP}
          port: 80
